--- a/app/src/main/res/layout/tempbasals_item.xml
+++ b/app/src/main/res/layout/tempbasals_item.xml
@@ -58,6 +58,16 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/cardObjectiveText" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="E"
+                android:id="@+id/tempbasals_extendedflag"
+                android:textColor="@color/colorSetExtendedButton"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:paddingRight="5dp" />
+
 
         </LinearLayout>
 
