DanaR as profile source

--- a/app/src/main/res/layout/nsprofileviewer_fragment.xml
+++ b/app/src/main/res/layout/nsprofileviewer_fragment.xml
@@ -113,6 +113,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/reloadprofile"
+                android:id="@+id/profileview_reload"
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 
